# website_server

./: Dockerfile  pyproject.toml
app/: __main__.py
app/src/: config.py
app/src/drivers/: http_client.py
static/css/: main.css
templates/: article.html  articles.html  base.html  home.html  navbar.html
